--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="title-error">Letras equivocadas:</div>
             <div class="container-letras-error"></div>
         </div>
-        <div class="container-horca"> <img src="/assets/horca.png" class="horca"></div>
+        <div class="container-horca"> <img src="horca.png" class="horca"></div>
         <div class="people">
         </div>
     </main>
